sfdx-source/force-app/main/default/objects/Integration_Request__c/Integration_Request__c.object-meta.xml
<CustomObject>
    <description>Holds the integration requests from BAT and sync the data to the heroku and Figment. 
BZAP-18797</description>
    <label>Integration Request</label>
    <nameField>
        <displayFormat>IR-{00000000}</displayFormat>
        <label>Integration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>