sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Map integration request with account using store Id received from bat</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Requests</relationshipLabel>
    <relationshipName>Integration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>