sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the value of action for integration requests. Example: Insert, update etc</description>
    <label>Action</label>
    <length>200</length>
    <type>Text</type>
</CustomField>