sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests. Holds the value of activation date of specific business process.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>