sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>Holds batch id for coo requests</description>
    <label>Batch Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>