sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the business Id of account.</description>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>