sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/COO_Parent_Account_Matching_Reason__c.field-meta.xml
<CustomField>
    <fullName>COO_Parent_Account_Matching_Reason__c</fullName>
    <description>LEM-15945: COO same store: Note the Business Account is created or matched for reporting</description>
    <label>COO Parent Account Matching Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>