sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/COO_Reparented_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>COO_Reparented_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15945 :Tag the Business  Account which got created or matched during COO same store</description>
    <label>COO Reparented Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Requests (COO Reparented Parent Account)</relationshipLabel>
    <relationshipName>Integration_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>