sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Decision_Maker_Email__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Email__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If the integration type is POS holds the value of decision maker email</description>
    <label>Decision Maker Email</label>
    <type>Email</type>
</CustomField>