sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the message for errors while processing requests.</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>