sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Exclusion_Code__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Code__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If integration type is POS holds the values of exclusion code examples codes - MENU_PULLING_REQUEST_FAILURE, MENU_JOB_FAILURE</description>
    <label>Exclusion Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>