sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests. Holds the value of Integration Id of external systems. example: POS requests it holds the POS integration Id.</description>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>