sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Integration_Provider__c.field-meta.xml
<CustomField>
    <fullName>Integration_Provider__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests. 
If Integration Type is POS Holds the value of POS integration provider.</description>
    <label>Integration Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>