sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Integration_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Sub_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15585: It indicates the Integration Sub Type.</description>
    <label>Integration Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>