sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If the integration type is POS holds the value of type of activations.</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS Requests</fullName>
            </value>
            <value>
                <fullName>COO Same Store</fullName>
            </value>
            <value>
                <fullName>Tablet Case Sync</fullName>
            </value>
            <value>
                <fullName>MDS Store Sync</fullName>
            </value>
            <value>
                <fullName>Activation Checklist</fullName>
            </value>
            <value>
                <fullName>Fraud Event</fullName>
            </value>
            <value>
                <fullName>Place It For Me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>