sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If the Integration type is Pos holds the value of activation notes.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>