sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Onboarding_Id__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Id__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If the integration type is pos holds the value of onboarding Id which is generated in BAT.</description>
    <externalId>true</externalId>
    <label>Onboarding Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>