sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.</description>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BULK_ACTIVATION</fullName>
            </value>
            <value>
                <fullName>SELF_SERVE_INTEGRATION_ONBOARDING</fullName>
            </value>
            <value>
                <fullName>RETAIL_ONBOARDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>