sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity linked to COO requests</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Integration Requests</relationshipLabel>
    <relationshipName>Integration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>