sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Parent_Integration_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be lookup field to the parent so upcoming integration requests with the same onboarding Id will be linked to the parent IR</description>
    <label>Integration Request</label>
    <referenceTo>Integration_Request__c</referenceTo>
    <relationshipLabel>Integration Requests</relationshipLabel>
    <relationshipName>Integration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>