sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>This field holds COO payload. instead of creating multiple fields we are using this field to hold the payload</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>