sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Previous_Integration_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Integration_Provider__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If Integration type is POS holds the value of previous pos Integration Provider</description>
    <label>Previous Integration Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>