sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>This field will be populated when the COO request sent from product. This status will be updated based coo request status at product.</description>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>ready</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>