sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Provider_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account_Owner_Email__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
If the integration type is POS holds the value of Provider email</description>
    <label>Provider Account Owner Email</label>
    <type>Email</type>
</CustomField>