sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Request_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner_Email__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the value of request owner. 
If Integration type is POS holds the value of POS integration request case owner.</description>
    <label>Request Owner Email</label>
    <type>Email</type>
</CustomField>