sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/SFDC_Org__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Org__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the value of org. whether to process POS integration request in Lemonade or Figment</description>
    <label>SFDC Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lemonade</fullName>
                <default>true</default>
                <label>Lemonade</label>
            </value>
            <value>
                <fullName>Figment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>