sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Sfdc_Status__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Status__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the value of status of Integration request</description>
    <label>Sfdc Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>