sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>LEM-8993</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>