sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status__c</fullName>
    <description>LEM-8993</description>
    <label>Stage Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>