sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.
Holds the value of restaurant Id.</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>