sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Store_Update_Event_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Store_Update_Event_Received_Date_Time__c</fullName>
    <description>Mulesoft will write Kafka event received Date/Time for the store sync events</description>
    <label>Store Update Event Received Date Time</label>
    <type>DateTime</type>
</CustomField>