sfdx-source/force-app/main/default/objects/Integration_Request__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <description>BZAP-18797 Receive pos integration requests from BAT and process the requests.This field will be used for store the status to update on the targeted object</description>
    <label>Target Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>