sfdx-source/force-app/main/default/objects/Integration_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Id__c</columns>
    <columns>Account__c</columns>
    <columns>Action__c</columns>
    <columns>Batch_Id__c</columns>
    <columns>Onboarding_Id__c</columns>
    <columns>Sfdc_Status__c</columns>
    <columns>SFDC_Org__c</columns>
    <columns>Product_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>