sfdx-source/force-app/main/default/objects/Integration_Request__c/listViews/COO_requests.listView-meta.xml
<ListView>
    <fullName>COO_requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Action__c</columns>
    <columns>Batch_Id__c</columns>
    <columns>Sfdc_Status__c</columns>
    <columns>Store_Id__c</columns>
    <columns>Onboarding_Id__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>COO Same Store</value>
    </filters>
    <label>COO requests</label>
</ListView>